# parse_rep

./: .editorconfig  .gitignore  README.md  pyproject.toml  setup.cfg
nitpick/: styleguide.toml
parse_script/: main.py
parse_without_f/: main.py
tests/: conftest.py
tests/parse/: test_parse.py
