[tool.poetry]
name = "radium"
version = "0.1.0"
description = ""
authors = ["kate-alman"]
readme = "README.md"

[tool.nitpick]
style = ["nitpick/all.toml"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true

[tool.poetry.dependencies]
python = "^3.9"
[tool.poetry.dependencies.pylint]
version = "*"
optional = true


[tool.poetry.extras]
lint = ["pylint"]

[tool.pytest.ini_options]
testpaths = [ "tests",]
python_files = "test*.py"
addopts = "-rsxX -l --tb=short --strict-markers --doctest-modules"
xfail_strict = "true"
asyncio_mode = "auto"
filterwarnings = "ignore::DeprecationWarning"

[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.:"]

[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.17.0"
flake8-pytest-style = "^1.3.0"
flake8-SQL = "^0.4.1"
flake8-annotations = "^2.4.1"
flake8-logging-format = "^0.8.1"
flake8-spellcheck = "^0.28.0"
isort = "^5.7.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-sugar = "^0.9.5"
Faker = "^15.1.0"
pytest-snapshot = "^0.9.0"

[tool.poetry.group.dev.dependencies.pytest-xdist]
extras = [ "psutil",]
version = "^3.0.2"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
